# automaton

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  agent.py  benchmark_results.json  benchmark_utils.py  compare_runs.py  eval_harness.py  graph.py  nodes.py  pyproject.toml  run_task.py  state.py  tools.py
benchmarks/tasks/task_001/: sequence.py  task.json  test_sequence.py
benchmarks/tasks/task_002/: ranges.py  task.json  test_ranges.py
benchmarks/tasks/task_003/: task.json  test_word_counts.py  word_counts.py
benchmarks/tasks/task_004/: parser.py  task.json  test_parser.py
benchmarks/tasks/task_005/: permissions.py  task.json  test_permissions.py
benchmarks/tasks/task_006/: slug.py  task.json  test_slug.py
benchmarks/tasks/task_007/: tags.py  task.json  test_tags.py
benchmarks/tasks/task_008/: task.json  test_usernames.py  usernames.py
benchmarks/tasks/task_009/: calendar_math.py  task.json  test_calendar_math.py
benchmarks/tasks/task_010/: division.py  task.json  test_division.py
benchmarks/tasks/task_011/: discounts.py  task.json  taxes.py  test_checkout_math.py
demo/: app.py
tests/: test_compare_runs.py
