[project]
name = "automaton"
version = "0.1.0"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "instructor>=1.4",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
py-modules = ["agent", "eval_harness", "nodes", "run_task", "state", "tools"]
