[project]
name = "automaton"
version = "0.1.0"
dependencies = [
    "langgraph==1.2.1",
    "langchain-core==1.4.0",
    "langchain-google-genai==4.2.3",
    "instructor==1.15.1",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pytest==8.4.2",
    "langsmith==0.8.5",
    "rich==14.3.4",
    "streamlit==1.57.0",
]

[tool.setuptools]
py-modules = ["agent", "eval_harness", "nodes", "run_task", "state", "tools"]
